review-evidence/532-r1/correction-a213/evidence/review-evidence/532-r1/author-a203/receipts/host-iptables-before.txt
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.21.0.5/32 ! -i br-8b7f57c913c8 -j DROP
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER ! -i br-0d380d6522cf -o br-0d380d6522cf -j DROP
-A DOCKER ! -i br-7bda8c7b23b1 -o br-7bda8c7b23b1 -j DROP
-A DOCKER ! -i br-f00319c9e54a -o br-f00319c9e54a -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-8b7f57c913c8 -o br-8b7f57c913c8 -j DROP
-A DOCKER-BRIDGE -o br-0d380d6522cf -j DOCKER
-A DOCKER-BRIDGE -o br-7bda8c7b23b1 -j DOCKER
-A DOCKER-BRIDGE -o br-f00319c9e54a -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-8b7f57c913c8 -j DOCKER
-A DOCKER-CT -o br-0d380d6522cf -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-7bda8c7b23b1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-f00319c9e54a -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-8b7f57c913c8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-0d380d6522cf -j ACCEPT
-A DOCKER-FORWARD -i br-7bda8c7b23b1 -j ACCEPT
-A DOCKER-FORWARD -i br-f00319c9e54a -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-8b7f57c913c8 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.21.0.0/16 ! -o br-8b7f57c913c8 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-f00319c9e54a -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-7bda8c7b23b1 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-0d380d6522cf -j MASQUERADE
COMMIT
